--- a/vaadin-grid-table-scroll-behavior.html
+++ b/vaadin-grid-table-scroll-behavior.html
@@ -305,7 +305,7 @@
       }
       this.debounce('vaadin-grid-scrolling', function() {
         this.scrolling = false;
-        this._reorderRows();
+        // this._reorderRows();
       }, 100);
     },
 
